// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: DropShadowWrapper renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          Object {
            "start": 10,
            "top": 20,
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": 0,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="start.0"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "start.0",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": 0,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="end.0"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "end.0",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": 0,
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top.0"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": 0,
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom.0"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={40}
              cy={40}
              fx={40}
              fy={40}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topStart.0"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "topStart.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={40}
              fx={0}
              fy={40}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topEnd.0"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "topEnd.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={40}
              cy={0}
              fx={40}
              fy={0}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomStart.0"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottomStart.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -0,
                },
                Object {
                  "translateY": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomEnd.0"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottomEnd.0",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskInside.0"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskInside.0"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
          },
          Object {},
          Object {
            "alignSelf": "stretch",
          },
        ]
      }
    >
      <View
        pointerEvents="box-none"
      >
        <View
          pointerEvents="none"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
              Object {
                "start": 0,
                "top": 0,
              },
            ]
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": -6,
                  "top": 0,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="start.1"
                  x1="1"
                  x2="0"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "start.1",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": "100%",
                  "top": 0,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="end.1"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "end.1",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": 0,
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="top.1"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "top.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": 0,
                  "top": "100%",
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottom.1"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottom.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth={7}
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": -6,
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={6}
                  cy={6}
                  fx={6}
                  fy={6}
                  gradient={
                    Array [
                      0,
                      0,
                      0,
                      168826920,
                      0.9999999999999999,
                      1054760,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topStart.1"
                  rx={6}
                  ry={6}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "topStart.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth={7}
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": "100%",
                  "top": -6,
                  "transform": Array [
                    Object {
                      "translateX": -0,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={6}
                  fx={0}
                  fy={6}
                  gradient={
                    Array [
                      0,
                      0,
                      0,
                      168826920,
                      0.9999999999999999,
                      1054760,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topEnd.1"
                  rx={6}
                  ry={6}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "topEnd.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth={7}
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": -6,
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateY": -0,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={6}
                  cy={0}
                  fx={6}
                  fy={0}
                  gradient={
                    Array [
                      0,
                      0,
                      0,
                      168826920,
                      0.9999999999999999,
                      1054760,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomStart.1"
                  rx={6}
                  ry={6}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottomStart.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth={7}
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                  "start": "100%",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateX": -0,
                    },
                    Object {
                      "translateY": -0,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    Array [
                      0,
                      0,
                      0,
                      168826920,
                      0.9999999999999999,
                      1054760,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomEnd.1"
                  rx={6}
                  ry={6}
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottomEnd.1",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          onLayout={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "borderBottomLeftRadius": 0,
                "borderBottomRightRadius": 0,
                "borderTopLeftRadius": 0,
                "borderTopRightRadius": 0,
              },
              Object {},
              Object {
                "alignSelf": "stretch",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`component: DropShadowWrapper renders with disableInnerWrapper 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          Object {
            "start": 10,
            "top": 20,
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": 0,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="start.2"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "start.2",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": 0,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="end.2"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "end.2",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": 0,
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top.2"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": 0,
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom.2"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={40}
              cy={40}
              fx={40}
              fy={40}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topStart.2"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "topStart.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={40}
              fx={0}
              fy={40}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topEnd.2"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "topEnd.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": -40,
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={40}
              cy={0}
              fx={40}
              fy={0}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomStart.2"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottomStart.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth={41}
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
              "start": "100%",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -0,
                },
                Object {
                  "translateY": -0,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0,
                  438654908,
                  0.9999999999999999,
                  2447292,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomEnd.2"
              rx={40}
              ry={40}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottomEnd.2",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskInside.2"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={0}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={0}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskInside.2"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 0,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
          },
          Object {},
          Object {
            "alignSelf": "stretch",
          },
        ]
      }
    />
  </View>
</View>
`;
